--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,29 @@
 [tool.poetry]
-name = "data-science-template"
+name = "karpathy-zero-to-hero"
 version = "0.1.0"
-description = "Base environments to be used for data science projects"
+description = "Poetry environment for working through Andrej Karpathy's Zero to Hero Neural Networks course"
 authors = ["Aaron W Chen <awc33@cornell.edu>"]
 readme = "README.md"
-packages = [{include = "data_science_template"}]
+# packages = [{include = "karpathy_zero_to_hero"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-numpy = "^1.26.0"
-pandas = "^2.1.0"
-ipython = "^8.15.0"
+python = "^3.10"
+ipython = "^8.18.1"
 jupyter = "^1.0.0"
-jupyterlab = "^4.0.6"
-statsmodels = "^0.14.0"
-matplotlib = "^3.8.0"
-sklearn = "^0.0.post9"
-scipy = "^1.11.2"
+jupyterlab = "^4.0.9"
+matplotlib = "^3.8.2"
+numpy = "^1.26.2"
+pandas = "^2.1.4"
+scikit-learn = "^1.3.2"
+SciPy = "^1.11.4"
+statsmodels = "^0.14.1"
+torch = "^2.1.2"
+torchvision = "^0.16.2"
+torchaudio = "^2.1.2"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^3.4.0"
-nbdev = "^2.3.12"
-black = "^23.9.1"
+pre-commit = "^3.6.0"
+black = "^23.12.0"
 
 [build-system]
 requires = ["poetry-core"]
