--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ torch = "^2.1.2"
 torchvision = "^0.16.2"
 torchaudio = "^2.1.2"
 graphviz = "^0.20.1"
+regex = "^2024.5.15"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
